extern/PICM114GL/include/MNet_M204.h

I16 PASCAL _mnet_m204_motion_done( U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 *McSts );
//
// Home
I16 PASCAL _mnet_m204_set_home_config( U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 home_mode, U16 org_logic, U16 ez_logic, U16 ez_count, U16 erc_out );
I16 PASCAL _mnet_m204_start_home_move( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc );
I16 PASCAL _mnet_m204_escape_home( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc );
I16 PASCAL _mnet_m204_home_search( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc, F64 ORGOffset );
//
// Counter Operating
I16 PASCAL _mnet_m204_get_command( U16 RingNo, U16 SlaveIP, U16 AxisNo, I32 *cmd );
I16 PASCAL _mnet_m204_get_position( U16 RingNo, U16 SlaveIP, U16 AxisNo, I32 *pos );
I16 PASCAL _mnet_m204_get_error_counter( U16 RingNo, U16 SlaveIP, U16 AxisNo, I16 *error );
I16 PASCAL _mnet_m204_set_command( U16 RingNo, U16 SlaveIP, U16 AxisNo, I32 cmd );
I16 PASCAL _mnet_m204_set_position( U16 RingNo, U16 SlaveIP, U16 AxisNo, I32 pos );
I16 PASCAL _mnet_m204_reset_command( U16 RingNo, U16 SlaveIP, U16 AxisNo );
I16 PASCAL _mnet_m204_reset_position( U16 RingNo, U16 SlaveIP, U16 AxisNo );
I16 PASCAL _mnet_m204_reset_error_counter( U16 RingNo, U16 SlaveIP, U16 AxisNo );
I16 PASCAL _mnet_m204_get_target_pos( U16 RingNo, U16 SlaveIP, U16 AxisNo, I32 *Pos );
I16 PASCAL _mnet_m204_set_target_pos( U16 RingNo, U16 SlaveIP, U16 AxisNo, I32 Pos );
I16 PASCAL _mnet_m204_set_move_ratio(U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 Ratio);
I16 PASCAL _mnet_m204_set_ring_count(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 Src, F64 Data);
I16 PASCAL _mnet_m204_enable_ring_count(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 Src, U16 OnOff);
I16 PASCAL _mnet_m204_get_rest_command( U16 RingNo, U16 SlaveIP, U16 AxisNo, I32 *rest_command );
I16 PASCAL _mnet_m204_get_current_speed( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 *speed );
//
// Position Override
I16 PASCAL _mnet_m204_p_change( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 NewPos );
I16 PASCAL _mnet_m204_d_change( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 NewDist );
//
// General Compare
I16 PASCAL _mnet_m204_set_general_comparator(U16 RingNo, U16 SlaveIP, U16 AxisNo, I16 CmpSrc, I16 CmpMethod, I16 CmpAction, F64 Data);
I16 PASCAL _mnet_m204_set_trigger_comparator(U16 RingNo, U16 SlaveIP, U16 AxisNo, I16 CmpSrc, I16 CmpMethod, F64 Data);
I16 PASCAL _mnet_m204_set_trigger_type(U16 RingNo, U16 SlaveIP, U16 AxisNo, I16 TriggerType);
I16 PASCAL _mnet_m204_set_soft_limit(U16 RingNo, U16 SlaveIP, U16 AxisNo, I32 PLimit, I32 NLimit);
I16 PASCAL _mnet_m204_enable_soft_limit(U16 RingNo, U16 SlaveIP, U16 AxisNo, I16 Action);
I16 PASCAL _mnet_m204_disable_soft_limit(U16 RingNo, U16 SlaveIP, U16 AxisNo);
I16 PASCAL _mnet_m204_check_compare_data(U16 RingNo, U16 SlaveIP, U16 AxisNo, I16 CmpType, F64 *Pos);
//
// Auto Compare
I16 PASCAL _mnet_m204_get_auto_compare_encoder(U16 RingNo, U16 SlaveIP, U16 AxisNo, I32 *EncPos);
I16 PASCAL _mnet_m204_set_auto_compare_encoder(U16 RingNo, U16 SlaveIP, U16 AxisNo, I32 EncPos);
I16 PASCAL _mnet_m204_get_auto_compare_count(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 *Count);
I16 PASCAL _mnet_m204_get_auto_compare_status(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 *OnOff);
I16 PASCAL _mnet_m204_set_auto_compare_trigger(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 Level, U16 Width);
I16 PASCAL _mnet_m204_set_auto_compare_function(U16 RingNo, U16 SlaveIP, U16 AxisNo, U8 Dir, I32 StrPos, I32 Interval, U16 TrgCnt);
I16 PASCAL _mnet_m204_set_auto_compare_table(U16 RingNo, U16 SlaveIP, U16 AxisNo, U8 Dir, U16 Size, I32 *Table);
I16 PASCAL _mnet_m204_start_auto_compare(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 OnOff);
I16 PASCAL _mnet_m204_force_trigger_output(U16 RingNo, U16 SlaveIP, U16 AxisNo);
//
// Jog
enum JogStep { Jog_Step_1 = 1, Jog_Step_10 = 10, Jog_Step_100 = 100 };
I16 PASCAL _mnet_m204_jog_switch_continue(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 SwitchLogic, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 PASCAL _mnet_m204_jog_switch_step(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 SwitchLogic, F64 Dist, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 PASCAL _mnet_m204_jog_pulser_step(U16 RingNo, U16 SlaveIP, U16 AxisNo, U8 Dir, U8 Step, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 PASCAL _mnet_m204_get_jogio_status(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 *Status);
//
// Latch
I16 PASCAL _mnet_m204_get_latch_data(U16 RingNo, U16 SlaveIP, U16 AxisNo, I16 LatchNo, I32 *Pos);
//
// Pre-registers
I16 PASCAL _mnet_m204_check_continuous_buffer(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 *IsFull);