extern/PICM114GL/include/MNet_M204.cs

            //
            // Motion Status
            [DllImport(DLLName)]
            public static extern short _mnet_m204_motion_done(ushort RingNo, ushort SlaveIP, ushort AxisNo, ref ushort McSts);
            //
            // Home
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_home_config(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort home_mode, ushort org_logic, ushort ez_logic, ushort ez_count, ushort erc_out);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_home_move(ushort RingNo, ushort SlaveIP, ushort AxisNo, double StrVel, double MaxVel, double Tacc);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_escape_home(ushort RingNo, ushort SlaveIP, ushort AxisNo, double StrVel, double MaxVel, double Tacc);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_home_search(ushort RingNo, ushort SlaveIP, ushort AxisNo, double StrVel, double MaxVel, double Tacc, double ORGOffset);
            //
            // Counter Operating
            [DllImport(DLLName)]
            public static extern short _mnet_m204_get_command(ushort RingNo, ushort SlaveIP, ushort AxisNo, ref int cmd);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_get_position(ushort RingNo, ushort SlaveIP, ushort AxisNo, ref int pos);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_get_error_counter(ushort RingNo, ushort SlaveIP, ushort AxisNo, ref short error);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_command(ushort RingNo, ushort SlaveIP, ushort AxisNo, int cmd);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_position(ushort RingNo, ushort SlaveIP, ushort AxisNo, int pos);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_reset_command(ushort RingNo, ushort SlaveIP, ushort AxisNo);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_reset_position(ushort RingNo, ushort SlaveIP, ushort AxisNo);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_reset_error_counter(ushort RingNo, ushort SlaveIP, ushort AxisNo);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_get_target_pos(ushort RingNo, ushort SlaveIP, ushort AxisNo, ref int Pos);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_target_pos(ushort RingNo, ushort SlaveIP, ushort AxisNo, int Pos);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_move_ratio(ushort RingNo, ushort SlaveIP, ushort AxisNo, double Ratio);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_ring_count(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort Src, double Data);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_enable_ring_count(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort Src, ushort OnOff);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_get_rest_command(ushort RingNo, ushort SlaveIP, ushort AxisNo, ref int rest_command);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_get_current_speed(ushort RingNo, ushort SlaveIP, ushort AxisNo, ref double speed);
            //
            // Position Override
            [DllImport(DLLName)]
            public static extern short _mnet_m204_p_change(ushort RingNo, ushort SlaveIP, ushort AxisNo, double NewPos);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_d_change(ushort RingNo, ushort SlaveIP, ushort AxisNo, double NewDist);
            //
            // General Compare
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_general_comparator(ushort RingNo, ushort SlaveIP, ushort AxisNo, short CmpSrc, short CmpMethod, short CmpAction, double Data);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_trigger_comparator(ushort RingNo, ushort SlaveIP, ushort AxisNo, short CmpSrc, short CmpMethod, double Data);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_trigger_type(ushort RingNo, ushort SlaveIP, ushort AxisNo, short TriggerType);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_soft_limit(ushort RingNo, ushort SlaveIP, ushort AxisNo, int PLimit, int NLimit);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_enable_soft_limit(ushort RingNo, ushort SlaveIP, ushort AxisNo, short Action);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_disable_soft_limit(ushort RingNo, ushort SlaveIP, ushort AxisNo);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_check_compare_data(ushort RingNo, ushort SlaveIP, ushort AxisNo, short CmpType, ref double Pos);
            //
            // Auto Compare
            [DllImport(DLLName)]
            public static extern short _mnet_m204_get_auto_compare_encoder(ushort RingNo, ushort SlaveIP, ushort AxisNo, ref int EncPos);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_auto_compare_encoder(ushort RingNo, ushort SlaveIP, ushort AxisNo, int EncPos);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_get_auto_compare_count(ushort RingNo, ushort SlaveIP, ushort AxisNo, ref ushort Count);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_get_auto_compare_status(ushort RingNo, ushort SlaveIP, ushort AxisNo, ref ushort OnOff);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_auto_compare_trigger(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort Level, ushort Width);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_auto_compare_function(ushort RingNo, ushort SlaveIP, ushort AxisNo, byte Dir, int StrPos, int Interval, ushort TrgCnt);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_auto_compare_table(ushort RingNo, ushort SlaveIP, ushort AxisNo, byte Dir, ushort Size, ref int Table);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_auto_compare(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort OnOff);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_force_trigger_output(ushort RingNo, ushort SlaveIP, ushort AxisNo);
            //
            // Jog
            enum JogStep { Jog_Step_1 = 1, Jog_Step_10 = 10, Jog_Step_100 = 100 };
            [DllImport(DLLName)]
            public static extern short _mnet_m204_jog_switch_continue(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort SwitchLogic, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_jog_switch_step(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort SwitchLogic, double Dist, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_jog_pulser_step(ushort RingNo, ushort SlaveIP, ushort AxisNo, byte Dir, byte Step, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_get_jogio_status(ushort RingNo, ushort SlaveIP, ushort AxisNo, ref ushort Status);
            // Latch
            [DllImport(DLLName)]
            public static extern short _mnet_m204_get_latch_data(ushort RingNo, ushort SlaveIP, ushort AxisNo, short LatchNo, ref int Pos);
            //
            // Pre-registers
            [DllImport(DLLName)]
            public static extern short _mnet_m204_check_continuous_buffer(ushort RingNo, ushort SlaveIP, ushort AxisNo, ref ushort IsFull);
            //
            [DllImport("kernel32")]
            private static extern long WritePrivateProfileString(string section, string key, string val, string filePath);
            [DllImport("kernel32")]
            private static extern int GetPrivateProfileString(string section, string key, string def, StringBuilder retVal, int size, string filePath);
